# src/main/resources/openapi.yml
@@ -9,6 +9,8 @@ info:
 servers:
   - url: http://localhost:9966/petclinic/api
 tags:
+  - name: oops
+    description: Endpoint which always returns an error.
   - name: owners
     description: Endpoints related to pet owners.
   - name: owner-v2
@@ -28,6 +30,38 @@ tags:
   - name: specialties
     description: Endpoints related to vet specialties.
 paths:
+  /oops:
+    get:
+      tags:
+        - oops
+      operationId: failingRequest
+      summary: Always fails
+      description: Produces sample error response.
+      responses:
+        200:
+          description: Never returned.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+          content:
+            text/plain:
+              schema:
+                type: string
+        304:
+          description: Not modified.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+        400:
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
   /owners:
     post:
       tags:
